<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".UploadActivity">

    <EditText
        android:id="@+id/tvp"
        android:layout_width="188dp"
        android:layout_height="40dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/topic_here"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="156dp"
        android:layout_height="139dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:contextClickable="true"
        android:foregroundGravity="center"
        android:onClick="selectimage"
        android:src="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/etc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvp" />

    <EditText
        android:id="@+id/etc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/content_goes_here"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/btnup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnup"
        android:layout_width="82dp"
        android:layout_height="41dp"
        android:layout_gravity="center"
        android:layout_marginBottom="7dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:onClick="upload"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etc" />


</androidx.constraintlayout.widget.ConstraintLayout>